actualizacion a los ejercicios de semantica y canvas

--- a/html/01semanticae2.html
+++ b/html/01semanticae2.html
@@ -31,58 +31,61 @@
           Page Title
         </h1>
       </header>
+      <main>
+        <section>
+          <h2>
+            My Blog Posts
+          </h2>
   
-      <section>
-        <h2>
-          My Blog Posts
-        </h2>
-        <article>
-          <header>
-            <p>
-              Article Title
-            </p>
-          </header>
-          <p>
-            content
-          </p>
-        </article>
-        <article>
-          <header>
-            <p>
-              Article Title
-            </p>
-          </header>
-          <p>
-            content
-          </p>
-        </article>
-        <aside>
-          <p>
-            Author info
-          </p>
-        </aside>
-
-        <article>
+          <article>
             <header>
-              <h1>How to Become an MDN Contributor</h1>
+              <p>
+                Article Title
+              </p>
             </header>
             <p>
-              Do you want to help protect the web?.... 
-            </p> 
-            <aside>
-              <blockquote>
-                Amazing quote from article
-              </blockquote>
-            </aside>
-            <footer>
-              <p>
-                Author info, publication date
-              </p>
-            </footer>
+              content
+            </p>
           </article>
-
-      </section>
   
+          <article>
+            <header>
+              <p>
+                Article Title
+              </p>
+            </header>
+            <p>
+              content
+            </p>
+          </article>
+  
+          <aside>
+            <p>
+              Author info
+            </p>
+          </aside>
+  
+          <article>
+              <header>
+                <h1>How to Become an MDN Contributor</h1>
+              </header>
+              <p>
+                Do you want to help protect the web?.... 
+              </p> 
+              <aside>
+                <blockquote>
+                  Amazing quote from article
+                </blockquote>
+              </aside>
+              <footer>
+                <p>
+                  Author info, publication date
+                </p>
+              </footer>
+            </article>
+        </section>
+      </main>
+
       <footer>
         Copyright Info
       </footer>
