ejercicios iniciales para el tema de float

--- a/html/css/floate01.html
+++ b/html/css/floate01.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="description" content="ejercicio css con float">
-        <link rel="stylesheet" href="floate01.css" type="text/css">
+        <link rel="stylesheet" href="floate02fernando.css" type="text/css">
     </head>
     <body>
         <header>
